2000-07-04  NIIBE Yutaka  <gniibe@chroot.org>

	* locale/programs/charmap.c (charmap_read): Prepend
	the condition filename == NULL.

2000-07-03  Greg McGary  <greg@mcgary.org>

	* libio/libio.h (_IO_FILE): Revert type of _chain to _IO_FILE*.
	* libio/libioP.h (_IO_ITER): Revert to type _IO_FILE*.
	(FILEBUF_LITERAL): Add cast for CHAIN init.
	* libio/genops.c (_IO_un_link, _IO_link_in, _IO_iter_begin): Add casts.
	(_IO_flush_all, _IO_flush_all_linebuffered, _IO_unbuffer_write):
	Revert type of `fp' to _IO_FILE*.
	(_IO_iter_file): Remove cast.
	(_IO_iter_next): Elide intermediate member reference.

	* sysdeps/powerpc/strchr.S:  Check bounds.
	Wrap extern symbols in BP_SYM ().

2000-07-03  Andreas Jaeger  <aj@suse.de>
	* dlfcn/Makefile (generated): New.

2000-07-03  Ulrich Drepper  <drepper@redhat.com>

	* libio/genops.c (__overflow): Use _IO_fwide to orient the stream.
	(__uflow): Likewise.
	(__underflow): Likewise.
	* libio/wgenops.c (__wunderflow): Likewise.
	* stdio-common/tst-unbputc.c: New file.
	* stdio-common/tst-unbputc.sh: New file.
	* stdio-common/Makefile: Add rules to build and run tst-unbputc.

	* po/en_GB.po: New file.
	Contributed by Robert Brady <rwb197@ecs.soton.ac.uk>.

2000-07-01  Andreas Jaeger  <aj@suse.de>

	* intl/Makefile (generated-dirs): New.

	* elf/Makefile (generated): trusted-dirs.h is always generated,
	move out of build-shared condition.
	(generated): Merge the two entries for build-shared.

2000-07-01  Ulrich Drepper  <drepper@redhat.com>

	* debug/Makefile (distribute): Add xtrace.sh.

2000-06-30  Ulrich Drepper  <drepper@redhat.com>

	* version.h (VERSION): Bump to 2.1.91.

	* configure.in: Update warning comment.  glibc should not be
	broken anymore.

	* sysdeps/unix/sysv/linux/ia64/Dist: Remove old content.  Add
	ioperm.c, sys/procfs.h, and sys/io.h.

	* sysdeps/powerpc/Dist: Add bp-asm.h.

	* assert/Depend: Add localedata.
	* assert/Makefile (test-assert-ENV): New.  Define LANGUAGE=C.